force-app/main/default/objects/PS_ASU_SP_ASR_CLSV__x/PS_ASU_SP_ASR_CLSV__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1BTJy_GPsVdBptsVG7pmMlW412CnU6CwgxITvLdHdL5Y/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_ASR_CLSVs</externalName>
    <label>Class Academic Student Record (external)</label>
    <pluralLabel>Class Academic Student Record (external)</pluralLabel>
</CustomObject>