force-app/main/default/objects/PS_ASU_SP_ASR_CLSV__x/fields/COURSE_ID__c.field-meta.xml
<CustomField>
    <fullName>COURSE_ID__c</fullName>
    <description>Data sourced from PS_ASU_A_CLASS.SUBJECT, CATALOG_NBR</description>
    <externalDeveloperName>COURSE_ID</externalDeveloperName>
    <label>Course</label>
    <length>10</length>
    <type>Text</type>
</CustomField>