force-app/main/default/objects/PS_ASU_SP_ASR_CLSV__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Academic Student Record (external)</relationshipLabel>
    <relationshipName>Class_Academic_Student_Record_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>