force-app/main/default/objects/PS_ASU_SP_ASR_CLSV__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <type>Text</type>
</CustomField>